--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
-      "target": "es2021",       
-      "module": "commonjs",   
-      "sourceMap": true,       
-      "outDir": "./build",      
-      "rootDir": "./src",       
-      "removeComments": true,    
-      "esModuleInterop": true
+      "target": "ES2021",            
+      "module": "commonjs",       
+      "sourceMap": true,         
+      "outDir": "./build",        
+      "rootDir": "./src",        
+      "removeComments": true,   
+      "noEmitOnError": true,
+      "strict": true,
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "resolveJsonModule": true
   }
 }
