--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "barros-labenu-system2",
+  "name": "api-labenu-system",
   "version": "1.0.0",
   "description": "Você estuda na Labenu_ há tanto tempo que já parecem anos, não é? Então, hoje, vamos pedir para criar um sistema que represente o básico da nossa organização.",
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./build/index.js",
-    "dev": "ts-node-dev ./src/index.ts",
-    "migrations": "tsc && node ./build/database/data/migrations.js"
+    "dev": "ts-node-dev ./src/index.ts"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/future4code/Barros-labenu-system2.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/future4code/Barros-labenu-system2/issues"
-  },
-  "homepage": "https://github.com/future4code/Barros-labenu-system2#readme",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
