--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-      "target": "ES2021",            
+      "target": "es6",            
       "module": "commonjs",       
       "sourceMap": true,         
       "outDir": "./build",        
@@ -9,7 +9,6 @@
       "noEmitOnError": true,
       "strict": true,
       "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
       "resolveJsonModule": true
   }
 }
