--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
   "name": "api-labenu-system",
   "version": "1.0.0",
-  "description": "Você estuda na Labenu_ há tanto tempo que já parecem anos, não é? Então, hoje, vamos pedir para criar um sistema que represente o básico da nossa organização.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./build/index.js",
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "ts-node-dev ./src/index.ts",
+    "start": "tsc && node ./build/index.js"
   },
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.14",
+    "@types/express": "^4.17.15",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@types/knex": "^0.16.1",
-    "@types/node": "^18.11.14",
+    "@types/node": "^18.11.18",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "knex": "^2.3.0",
-    "mysql": "^2.18.1",
-    "save-dev": "^0.0.1-security"
+    "knex": "^2.4.0",
+    "mysql": "^2.18.1"
   }
 }
