--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-      "target": "ES2021",            
+      "target": "es6",            
       "module": "commonjs",       
       "sourceMap": true,         
       "outDir": "./build",        
       "rootDir": "./src",        
-      "removeComments": true,   
+      "removeComments": true,    
+      "noImplicitAny": true,       
       "noEmitOnError": true,
       "strict": true,
       "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
       "resolveJsonModule": true
   }
 }
