--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && node ./build/index.js",
     "dev": "ts-node-dev ./src/index.ts",
-    "start": "tsc && node ./build/index.js"
+    "migrations": "ts-node-dev ./src/migrations/migrations.ts"
   },
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/uuid": "^9.0.0",
+    "dotenv": "^16.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
@@ -20,7 +22,6 @@
     "@types/knex": "^0.16.1",
     "@types/node": "^18.11.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
